--- a/Marathon.HangFire/Marathon.HangFire.csproj
+++ b/Marathon.HangFire/Marathon.HangFire.csproj
@@ -10,6 +10,9 @@
   <ItemGroup>
     <PackageReference Include="HangFire.Core" Version="1.7.28" />
     <PackageReference Include="HangFire.SQLServer" Version="1.7.28" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.0" />
+    <PackageReference Include="microsoft.extensions.configuration.json" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
