--- a/Marathon.HangFire/Marathon.HangFire.csproj
+++ b/Marathon.HangFire/Marathon.HangFire.csproj
@@ -12,6 +12,7 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.0" />
 		<PackageReference Include="microsoft.extensions.configuration.json" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
 		
 		<!--Allows for nested appsettings-->
 		<None Update="appsettings.json">
