--- a/Marathon.HangFire/Marathon.HangFire.csproj
+++ b/Marathon.HangFire/Marathon.HangFire.csproj
@@ -30,6 +30,8 @@
 			<DependentUpon>appsettings.json</DependentUpon>
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
+		<PackageReference Include="serilog.settings.configuration" Version="3.3.0" />
+		<PackageReference Include="serilog.sinks.console" Version="4.0.1" />
 	</ItemGroup>
 
 </Project>
