--- a/Marathon.HangFire/appsettings.json
+++ b/Marathon.HangFire/appsettings.json
@@ -1,5 +1,13 @@
 ﻿{
-  "AppSettings": {
-    "Environment": "Default"
+  "Environment": "Default",
+  "LoopTimes": 5,
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Micrsoft": "Information", // if namespace MS, log info level or higher
+        "System": "Warning" // if namespace System, log warning or higher
+      }
+    }
   }
 }
